--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,22 @@
   color: #61dafb;
 }
 
+.input-box{
+  height: 40px;
+  width: 600px;
+  font-size: 18px;
+  border-radius: 5px;
+}
+
+.label-size{
+  font-size: 24px;
+}
+
+.submit-button{
+  height: 40px;
+  width: 100px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
