added vistor module,updated readme page

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,14 @@
   width: 100px;
 }
 
+#visitors {
+  text-align: center;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  border: 3px solid #ddd;
+  width: 100%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
